--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.s.springcloud</groupId>
-  <artifactId>springcloud</artifactId>
+  <artifactId>springcloud22</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
       <module>cloud-provider-payment8001</module>
